[tool.poetry]
name = "pytest-django-queries-bot"
version = "0.0.0"
description = "Generate performance rapports from your django database performance tests."
authors = ["NyanKiyoshi <hello@vanille.bid>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/NyanKiyoshi/pytest-django-queries-bot/"
repository = "https://github.com/NyanKiyoshi/pytest-django-queries-bot/"
documentation = "https://pytest-django-queries.readthedocs.io/latest/"

[tool.poetry.dependencies]
flask = "*"

[tool.poetry.dev-dependencies]
pre-commit = "~1.16"

[tool.black]
target_version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''
